[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://ui/countdown_bar/CountdownBar.tscn" type="PackedScene" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 88.0

[node name="CountdownBar" parent="VBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_right = 1264.0
margin_bottom = 36.0

[node name="TextContainer" type="HBoxContainer" parent="VBox"]
margin_top = 40.0
margin_right = 1264.0
margin_bottom = 70.0

[node name="PhaseLabel" type="Label" parent="VBox/TextContainer"]
unique_name_in_owner = true
margin_right = 418.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Phase: [PHASE] "

[node name="RoundScoreLabel" type="Label" parent="VBox/TextContainer"]
unique_name_in_owner = true
margin_left = 422.0
margin_right = 841.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Current score: [SCORE] "

[node name="TotalScoreLabel" type="Label" parent="VBox/TextContainer"]
unique_name_in_owner = true
margin_left = 845.0
margin_right = 1264.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Total Score: [SCORE] "
